Fix audio badge stretching

--- a/src/components/primary/channels/_badge.scss
+++ b/src/components/primary/channels/_badge.scss
@@ -1,6 +1,5 @@
 .theme-dark{
     .base-PmTxvP{
-        width: auto !important;
         min-width: 20px;
         min-height: 20px;
         background-color: #003b67 !important;
